command for applying stylesheet to html code coverage presentation

--- a/candybar/styles/default.css
+++ b/candybar/styles/default.css
@@ -1,6 +1,7 @@
 /**
- * PHPUnit Code Coverage Daytime Style - Makes coverage pages more readable
+ * Candybar - Default style for coverage html presentation
  * @author adrian7
+ * @version 1.0
  */
 
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
