--- a/tests/data/html/.css/style.css
+++ b/tests/data/html/.css/style.css
@@ -1,3 +1,190 @@
 /**
- * Some styling rules
+ * Candybar - Default style for coverage html presentation
+ * @author adrian7
+ * @version 1.0
  */
+
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
+
+body {
+    padding-top: 10px;
+    background: #f1f1f1;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 23px;
+}
+
+.container{
+    width: 99%;
+}
+
+.breadcrumb,
+.table{
+    border: 1px solid #cccccc;
+    border-radius: 4px;
+}
+
+.table tbody>tr>td,
+.table thead>tr>td {
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+table tr:hover,
+table tr:hover > td{
+    background: #ffecc3 !important;
+}
+
+#code{
+    background: #ffffff;
+    border-radius: 4px;
+}
+
+footer span{
+    padding: 5px;
+    border-radius: 4px;
+}
+
+footer p:last-child{
+    font-size: smaller;
+}
+
+.progress {
+    height: 28px;
+    border: 2px solid #fcfcfc;
+    min-width: 190px;
+    width: 100%;
+}
+
+/*Colors*/
+.progress-bar-danger{
+    background: #be3a36;
+}
+
+.popover {
+ max-width: none;
+}
+
+.glyphicon {
+ margin-right:.25em;
+}
+
+.table-bordered>thead>tr>td {
+ border-bottom-width: 1px;
+}
+
+.table tbody>tr>td,
+.table thead>tr>td {
+ padding-top: 5px;
+ padding-bottom: 5px;
+}
+
+.table-condensed tbody>tr>td {
+ padding-top: 0;
+ padding-bottom: 0;
+}
+
+.table .progress {
+ margin-bottom: inherit;
+}
+
+.table-borderless th, .table-borderless td {
+ border: 0 !important;
+}
+
+.table tbody tr.covered-by-large-tests, li.covered-by-large-tests, tr.success, td.success, li.success, span.success {
+ background-color: #dff0d8;
+}
+
+.table tbody tr.covered-by-medium-tests, li.covered-by-medium-tests {
+ background-color: #c3e3b5;
+}
+
+.table tbody tr.covered-by-small-tests, li.covered-by-small-tests {
+ background-color: #99cb84;
+}
+
+.table tbody tr.danger, .table tbody td.danger, li.danger, span.danger {
+ background-color: #f2dede;
+}
+
+.table tbody td.warning, li.warning, span.warning {
+ background-color: #fcf8e3;
+}
+
+.table tbody td.info {
+ background-color: #d9edf7;
+}
+
+td.big {
+ width: 117px;
+}
+
+td.small {
+}
+
+td.codeLine {
+ font-family: monospace;
+ white-space: pre;
+}
+
+td span.comment {
+ color: #888a85;
+}
+
+td span.default {
+ color: #2e3436;
+}
+
+td span.html {
+ color: #888a85;
+}
+
+td span.keyword {
+ color: #2e3436;
+ font-weight: bold;
+}
+
+pre span.string {
+ color: #2e3436;
+}
+
+span.success, span.warning, span.danger {
+ margin-right: 2px;
+ padding-left: 10px;
+ padding-right: 10px;
+ text-align: center;
+}
+
+#classCoverageDistribution, #classComplexity {
+ height: 200px;
+ width: 475px;
+}
+
+#toplink {
+ position: fixed;
+ left: 5px;
+ bottom: 5px;
+ outline: 0;
+}
+
+svg text {
+ font-family: "Lucida Grande", "Lucida Sans Unicode", Verdana, Arial, Helvetica, sans-serif;
+ font-size: 11px;
+ color: #666;
+ fill: #666;
+}
+
+.scrollbox {
+ height:245px;
+ overflow-x:hidden;
+ overflow-y:scroll;
+}
+
+/*Responsive*/
+
+@media screen and (min-width: 1920px){
+    .container{
+        width: 80%;
+        max-width: 1980px;
+    }
+}
